Добавили головну секцыю

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         </li>
       </ul>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <h1>Лист</h1>
+      </section>
+    </main>
   </body>
 </html>
